# PolarisDB

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  mkdocs.yml  verify_server.sh
.agent/: ARCHITECTURE.md  README.md
.agent/workflows/: add-feature.md  fix-bug.md  run-tests.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-python.yml  release-rust.yml
docs/: contributing.md  examples.md  index.md
docs/api/: http.md  python.md  rust.md
docs/getting-started/: installation.md  python.md  quickstart.md
docs/guides/: filtering.md  langchain.md  rag.md
examples/: langchain_rag.py
polarisdb/: Cargo.toml
polarisdb-core/: Cargo.toml
polarisdb-core/benches/: distance.rs  simd_bench.rs
polarisdb-core/src/: collection.rs  distance.rs  error.rs  lib.rs  payload.rs  vector.rs
polarisdb-core/src/filter/: bitmap_index.rs  mod.rs
polarisdb-core/src/index/: brute_force.rs  hnsw.rs  mod.rs
polarisdb-core/src/storage/: data_file.rs  mod.rs  wal.rs
polarisdb-core/tests/: property_tests.proptest-regressions  property_tests.rs
polarisdb-server/: Cargo.toml
polarisdb-server/src/: main.rs
polarisdb/examples/: async_demo.rs  hnsw_demo.rs  ollama_rag.rs  persistence_demo.rs  prefilter_demo.rs  quickstart.rs
polarisdb/src/: lib.rs
py/: Cargo.toml  README.md  pyproject.toml  test_bindings.py
py/python/polarisdb/: __init__.py  langchain.py
py/src/: lib.rs
