[workspace]
resolver = "2"
members = [
    "polarisdb-core",
    "polarisdb",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/polarisdb"
keywords = ["vector", "database", "embedding", "ai", "rag"]
categories = ["database", "data-structures", "science"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
criterion = "0.5"
proptest = "1.4"
rand = "0.8"
memmap2 = "0.9"
crc32fast = "1.4"
parking_lot = "0.12"
roaring = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
