[package]
name = "polarisdb"
description = "PolarisDB - an embedded vector database for local AI and RAG workloads"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
polarisdb-core = { path = "../polarisdb-core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true

[features]
default = []
async = ["polarisdb-core/async"]

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
